stop slide image caption wrapping

--- a/styles/Slideshow.module.css
+++ b/styles/Slideshow.module.css
@@ -22,6 +22,7 @@
   background-color: rgba(0, 0, 0, 0.3);
   box-shadow: 2px 2px 5px black;
   position: absolute;
+  white-space: nowrap;
   padding: 0em 1em;
   bottom: -1.5em;
   transition: opacity 2s ease-in-out;
